// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-fMjwjh jNKKQk"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-fMjwjh jNKKQk"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-fMjwjh jNKKQk"
>
  <span
    className="sc-eiXkCI fpneMx"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-fMjwjh jNKKQk"
>
  <div
    className="sc-kbXUY dcBeAa"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-fMjwjh ddtOhh"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-fMjwjh eHydsF"
  size="small"
/>
`;
